--- a/Task2_dmrf_visual_ipynb_.ipynb
+++ b/Task2_dmrf_visual_ipynb_.ipynb
@@ -3688,7 +3688,7 @@
     {
       "cell_type": "code",
       "source": [
-        "fig, axes = plt.subplots(nrows=5, ncols=1, figsize=(20, 55))  # Предполагаем, что у нас 5 показателей\n",
+        "fig, axes = plt.subplots(nrows=5, ncols=1, figsize=(20, 55)) \n",
         "\n",
         "pokazateli = ['floorMax', 'objElemLivingCnt', 'objSquareLiving', 'objElemParkingCnt', 'objPriceAvg']\n",
         "# Определение названий осей X\n",
